# FR-Harness

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  fr-harness.toml  pyproject.toml
.github/workflows/: ci.yml
demo/: mock_repair_demo.py
src/fr_harness/: agent.py  cli.py  config.py  credentials.py  db.py  feedback.py  guardrails.py  llm.py  memory.py  models.py  security.py  tools.py  web.py
temp/: 2026-07-17-remediation-implementation-plan.md  pr-body.md  remediation-design.md
temp/remediation-task-01/: GOAL.md  findings.md  progress.md  task_plan.md
temp/remediation-task-02/: GOAL.md  findings.md  progress.md  task_plan.md
temp/remediation-task-03/: GOAL.md  findings.md  progress.md  task_plan.md
temp/remediation-task-04/: GOAL.md  findings.md  progress.md  task_plan.md
temp/remediation-task-05/: GOAL.md  findings.md  progress.md  task_plan.md
temp/remediation-task-06/: GOAL.md  findings.md  progress.md  task_plan.md
temp/remediation-task-07/: GOAL.md  findings.md  progress.md  task_plan.md
temp/remediation-task-08/: GOAL.md  findings.md  progress.md  task_plan.md
temp/remediation-task-09/: GOAL.md  findings.md  progress.md  task_plan.md
tests/: test_agent.py  test_approvals_integration.py  test_cli.py  test_config.py  test_course_documents.py  test_credentials.py  test_db.py  test_demo.py  test_feedback.py  test_github_actions.py  test_guardrails.py  test_llm.py  test_memory.py  test_models.py  test_readme_security.py  test_tools.py  test_web.py
(+40 files in other folders)
